--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <title>cvrr blog sys</title>
+    <title>RuralCompany</title>
 
     <!-- Bootstrap CSS -->
     <link
