--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,11 @@
     />
 
     <!-- My Style -->
-    <link rel="stylesheet" href="http://localhost:3000/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://workify-services.herokuapp.com/style.css"
+    />
+    <!-- http://localhost:3000 -->
 
     <!-- trix rich text editor-->
     <link
