--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
     />
 
     <!-- My Style -->
-    <link
-      rel="stylesheet"
-      href="https://workify-services.herokuapp.com/style.css"
-    />
+    <link rel="stylesheet" href="https://workify-beta.netlify.app/style.css" />
+    <!-- https://workify-beta.netlify.app -->
+    <!-- https://workify-services.herokuapp.com -->
     <!-- http://localhost:3000 -->
 
     <!-- trix rich text editor-->
